--- a/templates/base.html
+++ b/templates/base.html
@@ -222,6 +222,11 @@
                         <i class="fas fa-exclamation-triangle"></i> Priority Schools
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/regional-analysis">
+                        <i class="fas fa-chart-bar"></i> Regional Analysis
+                    </a>
+                </li>
                 <li><hr class="dropdown-divider bg-light opacity-25 my-3"></li>
                 <li class="nav-item">
                     <a class="nav-link" href="#settings">
